# nethy

./: README.md  pyproject.toml
nethy/: activations.py  nethe.py  network.py
resources/: seeds_dataset.csv
