[tool.poetry]
name = "nethy"
version = "0.0.0"
description = "A pure python neural library."
authors = ["Manassés Lima <manasseslima@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
